K8S/ingress/traeifk/application/canaery-release/01-animals-bears.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: bear-app
  labels:
    app: animals-app
    animal: bear
spec:
  replicas: 2
  selector:
    matchLabels:
      app: animals-app
      task: bear
  template:
    metadata:
      labels:
        app: animals-app
        task: bear
        version: v0.0.1
    spec:
      containers:
      - name: bear
        image: supergiantkir/animals:bear
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: bear-app
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: animals-app
    task: bear
---
