K8S/ingress/traeifk/application/canaery-release/02-animals-moose.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: moose-canary
  labels:
    app: animals-app-canary
    animal: moose
spec:
  replicas: 2
  selector:
    matchLabels:
      app: animals-app-canary
      task: moose
  template:
    metadata:
      labels:
        app: animals-app-canary
        task: moose
        version: v0.0.1
    spec:
      containers:
      - name: moose
        image: supergiantkir/animals:moose
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: moose-app-canary
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: animals-app-canary
    task: moose
